--- a/insta485/templates/index.html
+++ b/insta485/templates/index.html
@@ -10,7 +10,9 @@
         Loading ...
     </div>
     <!-- Load JavaScript -->
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}">
+        
+    </script>
 </body>
 
 </body>
