--- a/insta485/templates/index.html
+++ b/insta485/templates/index.html
@@ -6,6 +6,14 @@
 </head>
 
 <body>
+    <h1>
+        <a href="/">Insta485</a>
+    </h1>
+    
+	  <p>
+			<a href="/explore/">Explore</a>
+			<a href="/users/{{ logname }}/">{{ logname }}</a>
+		</p>
     <div id="reactEntry">
         Loading ...
     </div>
